--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         display: none;
         text-align: center;
       }
+        h1 {
+        font-size: 3em;
+        color: #4caf50; /* Green */
+        animation: bounce-in-top 3s cubic-bezier(0.68, -0.55, 0.265, 1.55) both;
+      }
 
       p {
         font-size: 2em;
@@ -74,7 +79,7 @@
     <div id="secured-content">
       <div class="login-container">
         <img src="images/winner.webp" alt="Sticker or Image" width="200" />
-        <p>Congratulations!</p>
+        <h1>Congratulations!</h1>
         <p>You Won!</p>
         <p>50$</p>
       </div>
